create structure project, resoleve problem folder img build

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <link rel="manifest" href="site.webmanifest">
     <link rel="apple-touch-icon" href="icon.png">
+    <link rel="stylesheet" type="text/css" href="./dist/css/style.min.css">
     <!-- Place favicon.ico in the root directory -->
 
 </head>
@@ -19,10 +20,127 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
-    <!-- Add your site or application content here -->
-    <p>Hello world! This is HTML5 Boilerplate.</p>
-    <script src="js/vendor/modernizr-3.6.0.min.js"></script>
-    <script src="js/main.js"></script>
+    <div class="wrapper">
+        <div class="page">
+            <div class="content-wrapper">
+                <div class="container main-container">
+                    <div class="main">
+                        <div class="conf_composable">
+                            <div id="step1" class="padding_top_crea" style="display:none"></div>
+                            <div id="step2" class="padding_top_crea" style="display:none"></div>
+                            <div id="step3">
+                                <div id="fixed_bracciale">
+                                    <div class="container_zoom"></div>
+                                    <div id="container_bracciale">
+                                        <div id="bracciale" style="width: 1119px;">
+                                            <div id="base_0" nrbase="0" class="tessera_base tessera_base_big_dark" style="height: 96px; width: 50px; margin-top: 0px;">
+                                                <div class="stella_incisione"></div>
+                                                <div class="tesserabracciale" style="height: 134px; width: 110px; top: -13px; left: -30px;"></div>
+                                                <div class="handletessera drop ui-sortable-handle ui-droppable"></div>
+                                            </div>
+                                            <div id="base_1" nrbase="1" class="tessera_base tessera_base_big_dark " style="height: 96px; width: 50px; margin-top: 0px;">
+                                                <div class="stella_incisione"></div>
+                                                <div class="tesserabracciale" style="height: 134px; width: 110px; top: -13px; left: -30px;"></div>
+                                                <div class="handletessera drop ui-sortable-handle ui-droppable"></div>
+                                            </div>
+                                            <div id="base_2" nrbase="2" class="tessera_base tessera_base_big_dark " style="height: 96px; width: 50px; margin-top: 0px;">
+                                                <div class="stella_incisione"></div>
+                                                <div class="tesserabracciale" style="height: 134px; width: 110px; top: -13px; left: -30px;"></div>
+                                                <div class="handletessera drop ui-sortable-handle ui-droppable"></div>
+                                            </div>
+                                            <div id="base_3" nrbase="3" class="tessera_base tessera_base_big_dark " style="height: 96px; width: 50px; margin-top: 0px;">
+                                                <div class="stella_incisione"></div>
+                                                <div class="tesserabracciale" style="height: 134px; width: 110px; top: -13px; left: -30px;"></div>
+                                                <div class="handletessera drop ui-sortable-handle ui-droppable"></div>
+                                            </div>
+                                            <div id="base_4" nrbase="4" class="tessera_base tessera_base_big_dark " style="height: 96px; width: 50px; margin-top: 0px;">
+                                                <div class="stella_incisione"></div>
+                                                <div class="tesserabracciale" style="height: 134px; width: 110px; top: -13px; left: -30px;"></div>
+                                                <div class="handletessera drop ui-sortable-handle ui-droppable"></div>
+                                            </div>
+                                            <div id="base_5" nrbase="5" class="tessera_base tessera_base_big_dark " style="height: 96px; width: 50px; margin-top: 0px;">
+                                                <div class="stella_incisione"></div>
+                                                <div class="tesserabracciale" style="height: 134px; width: 110px; top: -13px; left: -30px;"></div>
+                                                <div class="handletessera drop ui-sortable-handle ui-droppable"></div>
+                                            </div>
+                                            <div id="base_6" nrbase="6" class="tessera_base tessera_base_big_dark " style="height: 96px; width: 50px; margin-top: 0px;">
+                                                <div class="stella_incisione"></div>
+                                                <div class="tesserabracciale" style="height: 134px; width: 110px; top: -13px; left: -30px;"></div>
+                                                <div class="handletessera drop ui-sortable-handle ui-droppable"></div>
+                                            </div>
+                                            <div id="base_7" nrbase="7" class="tessera_base tessera_base_big_dark " style="height: 96px; width: 50px; margin-top: 0px;">
+                                                <div class="stella_incisione"></div>
+                                                <div class="tesserabracciale" style="height: 134px; width: 110px; top: -13px; left: -30px;"></div>
+                                                <div class="handletessera drop ui-sortable-handle ui-droppable"></div>
+                                            </div>
+                                            <div id="base_8" nrbase="8" class="tessera_base tessera_base_big_dark " style="height: 96px; width: 50px; margin-top: 0px;">
+                                                <div class="stella_incisione"></div>
+                                                <div class="tesserabracciale" style="height: 134px; width: 110px; top: -13px; left: -30px;"></div>
+                                                <div class="handletessera drop ui-sortable-handle ui-droppable"></div>
+                                            </div>
+                                            <div id="base_9" nrbase="9" class="tessera_base tessera_base_big_dark " style="height: 96px; width: 50px; margin-top: 0px;">
+                                                <div class="stella_incisione"></div>
+                                                <div class="tesserabracciale" style="height: 134px; width: 110px; top: -13px; left: -30px;"></div>
+                                                <div class="handletessera drop ui-sortable-handle ui-droppable"></div>
+                                            </div>
+                                            <div id="base_10" nrbase="10" class="tessera_base tessera_base_big_dark " style="height: 96px; width: 50px; margin-top: 0px;">
+                                                <div class="stella_incisione"></div>
+                                                <div class="tesserabracciale" style="height: 134px; width: 110px; top: -13px; left: -30px;"></div>
+                                                <div class="handletessera drop ui-sortable-handle ui-droppable"></div>
+                                            </div>
+                                            <div id="base_11" nrbase="11" class="tessera_base tessera_base_big_dark " style="height: 96px; width: 50px; margin-top: 0px;">
+                                                <div class="stella_incisione"></div>
+                                                <div class="tesserabracciale" style="height: 134px; width: 110px; top: -13px; left: -30px;"></div>
+                                                <div class="handletessera drop ui-sortable-handle ui-droppable"></div>
+                                            </div>
+                                            <div id="base_12" nrbase="12" class="tessera_base tessera_base_big_dark " style="height: 96px; width: 50px; margin-top: 0px;">
+                                                <div class="stella_incisione"></div>
+                                                <div class="tesserabracciale" style="height: 134px; width: 110px; top: -13px; left: -30px;"></div>
+                                                <div class="handletessera drop ui-sortable-handle ui-droppable"></div>
+                                            </div>
+                                            <div id="base_13" nrbase="13" class="tessera_base tessera_base_big_dark " style="height: 96px; width: 50px; margin-top: 0px;">
+                                                <div class="stella_incisione"></div>
+                                                <div class="tesserabracciale" style="height: 134px; width: 110px; top: -13px; left: -30px;"></div>
+                                                <div class="handletessera drop ui-sortable-handle ui-droppable"></div>
+                                            </div>
+                                            <div id="base_14" nrbase="14" class="tessera_base tessera_base_big_dark " style="height: 96px; width: 50px; margin-top: 0px;">
+                                                <div class="stella_incisione"></div>
+                                                <div class="tesserabracciale" style="height: 134px; width: 110px; top: -13px; left: -30px;"></div>
+                                                <div class="handletessera drop ui-sortable-handle ui-droppable"></div>
+                                            </div>
+                                            <div id="base_15" nrbase="15" class="tessera_base tessera_base_big_dark " style="height: 96px; width: 50px; margin-top: 0px;">
+                                                <div class="stella_incisione"></div>
+                                                <div class="tesserabracciale" style="height: 134px; width: 110px; top: -13px; left: -30px;"></div>
+                                                <div class="handletessera drop ui-sortable-handle ui-droppable"></div>
+                                            </div>
+                                            <div id="base_16" nrbase="16" class="tessera_base tessera_base_big_dark " style="height: 96px; width: 50px; margin-top: 0px;">
+                                                <div class="stella_incisione"></div>
+                                                <div class="tesserabracciale" style="height: 134px; width: 110px; top: -13px; left: -30px;"></div>
+                                                <div class="handletessera drop ui-sortable-handle ui-droppable"></div>
+                                            </div>
+                                            <div id="base_17" nrbase="17" class="tessera_base tessera_base_big_dark " style="height: 96px; width: 50px; margin-top: 0px;">
+                                                <div class="stella_incisione"></div>
+                                                <div class="tesserabracciale" style="height: 134px; width: 110px; top: -13px; left: -30px;"></div>
+                                                <div class="handletessera drop ui-sortable-handle ui-droppable"></div>
+                                            </div>
+                                            <div id="base_18" nrbase="18" class="tessera_base tessera_base_big_dark " style="height: 96px; width: 50px; margin-top: 0px;">
+                                                <div class="stella_incisione"></div>
+                                                <div class="tesserabracciale" style="height: 134px; width: 110px; top: -13px; left: -30px;"></div>
+                                                <div class="handletessera drop ui-sortable-handle ui-droppable"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+    <script src="./dist/js/common.js"></script>
+    <script src="./dist/js/pages/home/home.js"></script>
 
 </body>
 
