add container tessere

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="manifest" href="site.webmanifest">
     <link rel="apple-touch-icon" href="icon.png">
     <link rel="stylesheet" type="text/css" href="./dist/css/style.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <!-- Place favicon.ico in the root directory -->
 
 </head>
@@ -131,6 +132,54 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div id="conf_filtro">
+                                    <div id="container_tessere" class="contenitore_tessere_tipo_composable">
+                                        <div id="tessere">
+                                            <div id="link_8033497379146" class="tessera" sku="8033497379146" imgsku="https://www.nomination.com/media/configurator/composable/big/8033497379146.png" cod_int="332305 08" nome=" Link Mom Heart with Stone" materiale="Sterling Silver" price="24.0000"
+                                                fprice="24" double="0" incisible="0" righe_inc="0" max_char="null" style="background-image: url(https://www.nomination.com/media/configurator/composable/big/8033497379146.png), url(https://www.nomination.com/skin/frontend/eurostep/core/img/tessera_base_drag_big.png);"></div>
+                                            <div id="link_8033497027726" class="tessera" sku="8033497027726" imgsku="https://www.nomination.com/media/configurator/composable/big/8033497027726.png" cod_int="032313 01" nome=" Link white Cross with Stones" materiale="Yellow Gold" price="65.0000" fprice="65"
+                                                double="0" incisible="0" righe_inc="0" max_char="null" style="background-image: url(https://www.nomination.com/media/configurator/composable/big/8033497027726.png), url(https://www.nomination.com/skin/frontend/eurostep/core/img/tessera_base_drag_big.png);"></div>
+                                            <div id="link_8033497362773" class="tessera" sku="8033497362773" imgsku="https://www.nomination.com/media/configurator/composable/big/8033497362773.png" cod_int="332203 03" nome=" Link Couple with Hearts" materiale="Sterling Silver" price="24.0000" fprice="24"
+                                                double="0" incisible="0" righe_inc="0" max_char="null" style="background-image: url(https://www.nomination.com/media/configurator/composable/big/8033497362773.png), url(https://www.nomination.com/skin/frontend/eurostep/core/img/tessera_base_drag_big.png);"></div>
+                                            <div id="link_8033497379160" class="tessera" sku="8033497379160" imgsku="https://www.nomination.com/media/configurator/composable/big/8033497379160.png" cod_int="332315 01" nome=" Link Sister with Stone" materiale="Sterling Silver" price="24.0000" fprice="24"
+                                                double="0" incisible="0" righe_inc="0" max_char="null" style="background-image: url(https://www.nomination.com/media/configurator/composable/big/8033497379160.png), url(https://www.nomination.com/skin/frontend/eurostep/core/img/tessera_base_drag_big.png);"></div>
+                                            <div id="link_8033497001726" class="tessera" sku="8033497001726" imgsku="https://www.nomination.com/media/configurator/composable/big/8033497001726.png" cod_int="032107 20" nome=" Link Shooting Star" materiale="Yellow Gold" price="25.0000" fprice="25"
+                                                double="0" incisible="0" righe_inc="0" max_char="null" style="background-image: url(https://www.nomination.com/media/configurator/composable/big/8033497001726.png), url(https://www.nomination.com/skin/frontend/eurostep/core/img/tessera_base_drag_big.png);"></div>
+                                            <div id="link_8033497063564" class="tessera" sku="8033497063564" imgsku="https://www.nomination.com/media/configurator/composable/big/8033497063564.png" cod_int="032210 35" nome=" Link Paw print" materiale="Yellow Gold" price="29.0000" fprice="29" double="0"
+                                                incisible="0" righe_inc="0" max_char="null" style="background-image: url(https://www.nomination.com/media/configurator/composable/big/8033497063564.png), url(https://www.nomination.com/skin/frontend/eurostep/core/img/tessera_base_drag_big.png);"></div>
+                                            <div id="link_8033497022240" class="tessera" sku="8033497022240" imgsku="https://www.nomination.com/media/configurator/composable/big/8033497022240.png" cod_int="032107 17" nome=" Link Star" materiale="Yellow Gold" price="25.0000" fprice="25" double="0"
+                                                incisible="0" righe_inc="0" max_char="null" style="background-image: url(https://www.nomination.com/media/configurator/composable/big/8033497022240.png), url(https://www.nomination.com/skin/frontend/eurostep/core/img/tessera_base_drag_big.png);"></div>
+                                            <div id="link_8033497379139" class="tessera" sku="8033497379139" imgsku="https://www.nomination.com/media/configurator/composable/big/8033497379139.png" cod_int="332203 15" nome=" Link Family Tree" materiale="Sterling Silver" price="24.0000" fprice="24"
+                                                double="0" incisible="0" righe_inc="0" max_char="null" style="background-image: url(https://www.nomination.com/media/configurator/composable/big/8033497379139.png), url(https://www.nomination.com/skin/frontend/eurostep/core/img/tessera_base_drag_big.png);"></div>
+                                            <div id="link_8033497342683" class="tessera" sku="8033497342683" imgsku="https://www.nomination.com/media/configurator/composable/big/8033497342683.png" cod_int="332110 13" nome=" Link Heart with Feet" materiale="Sterling Silver" price="20.0000" fprice="20"
+                                                double="0" incisible="0" righe_inc="0" max_char="null" style="background-image: url(https://www.nomination.com/media/configurator/composable/big/8033497342683.png), url(https://www.nomination.com/skin/frontend/eurostep/core/img/tessera_base_drag_big.png);"></div>
+                                            <div id="link_8033497023971" class="tessera" sku="8033497023971" imgsku="https://www.nomination.com/media/configurator/composable/big/8033497023971.png" cod_int="032205 23" nome=" Link Yin Yang" materiale="Yellow Gold" price="29.0000" fprice="29" double="0"
+                                                incisible="0" righe_inc="0" max_char="null" style="background-image: url(https://www.nomination.com/media/configurator/composable/big/8033497023971.png), url(https://www.nomination.com/skin/frontend/eurostep/core/img/tessera_base_drag_big.png);"></div>
+                                            <div id="link_8033497022196" class="tessera" sku="8033497022196" imgsku="https://www.nomination.com/media/configurator/composable/big/8033497022196.png" cod_int="032107 12" nome=" Link Raised Star" materiale="Yellow Gold" price="25.0000" fprice="25" double="0"
+                                                incisible="0" righe_inc="0" max_char="null" style="background-image: url(https://www.nomination.com/media/configurator/composable/big/8033497022196.png), url(https://www.nomination.com/skin/frontend/eurostep/core/img/tessera_base_drag_big.png);"></div>
+                                            <div id="link_8033497357960" class="tessera" sku="8033497357960" imgsku="https://www.nomination.com/media/configurator/composable/big/8033497357960.png" cod_int="332111 04" nome=" Link Snowcat" materiale="Sterling Silver" price="20.0000" fprice="20" double="0"
+                                                incisible="0" righe_inc="0" max_char="null" style="background-image: url(https://www.nomination.com/media/configurator/composable/big/8033497357960.png), url(https://www.nomination.com/skin/frontend/eurostep/core/img/tessera_base_drag_big.png);"></div>
+                                            <div id="link_8033497304582" class="tessera" sku="8033497304582" imgsku="https://www.nomination.com/media/configurator/composable/big/8033497304582.png" cod_int="332310 03" nome=" Link Star with Stones" materiale="Sterling Silver" price="35.0000" fprice="35"
+                                                double="0" incisible="0" righe_inc="0" max_char="null" style="background-image: url(https://www.nomination.com/media/configurator/composable/big/8033497304582.png), url(https://www.nomination.com/skin/frontend/eurostep/core/img/tessera_base_drag_big.png);"></div>
+                                            <div id="link_8033497362841" class="tessera" sku="8033497362841" imgsku="https://www.nomination.com/media/configurator/composable/big/8033497362841.png" cod_int="332308 01" nome=" Link red Enamel Hearts" materiale="Sterling Silver" price="35.0000" fprice="35"
+                                                double="0" incisible="0" righe_inc="0" max_char="null" style="background-image: url(https://www.nomination.com/media/configurator/composable/big/8033497362841.png), url(https://www.nomination.com/skin/frontend/eurostep/core/img/tessera_base_drag_big.png);"></div>
+                                            <div id="link_8033497379061" class="tessera" sku="8033497379061" imgsku="https://www.nomination.com/media/configurator/composable/big/8033497379061.png" cod_int="332203 08" nome=" Link pink Pram" materiale="Sterling Silver" price="24.0000" fprice="24"
+                                                double="0" incisible="0" righe_inc="0" max_char="null" style="background-image: url(https://www.nomination.com/media/configurator/composable/big/8033497379061.png), url(https://www.nomination.com/skin/frontend/eurostep/core/img/tessera_base_drag_big.png);"></div>
+                                            <div id="link_8033497379078" class="tessera" sku="8033497379078" imgsku="https://www.nomination.com/media/configurator/composable/big/8033497379078.png" cod_int="332203 09" nome=" Link light blue Pram" materiale="Sterling Silver" price="24.0000" fprice="24"
+                                                double="0" incisible="0" righe_inc="0" max_char="null" style="background-image: url(https://www.nomination.com/media/configurator/composable/big/8033497379078.png), url(https://www.nomination.com/skin/frontend/eurostep/core/img/tessera_base_drag_big.png);"></div>
+                                            <div id="link_8033497304643" class="tessera" sku="8033497304643" imgsku="https://www.nomination.com/media/configurator/composable/big/8033497304643.png" cod_int="332501 01" nome=" Zodiac Link Aries with Birthstone" materiale="Sterling Silver" price="28.0000"
+                                                fprice="28" double="0" incisible="0" righe_inc="0" max_char="null" style="background-image: url(https://www.nomination.com/media/configurator/composable/big/8033497304643.png), url(https://www.nomination.com/skin/frontend/eurostep/core/img/tessera_base_drag_big.png);"></div>
+                                        </div>
+                                        <div id="tessera_detail" style="left: 116px; top: 12px; display: none;">
+                                            <div id="imgdetail" class="tesseradrag drag ui-draggable ui-draggable-handle" sku="8033497027726" cod_int="032313 01" imgsku="https://www.nomination.com/media/configurator/composable/big/8033497027726.png" price="65.0000" nome=" Link white Cross with Stones"
+                                                materiale="Yellow Gold" fprice="65" double="0" incisible="0" righe_inc="0" max_char="null" style="margin-top: 0px; background-image: url(&quot;https://www.nomination.com/media/configurator/composable/big/8033497027726.png&quot;), url(&quot;https://www.nomination.com/skin/frontend/eurostep/core/img/tessera_base_drag_big.png&quot;);">
+                                            </div>
+                                            <div id="textdetail"><span class="titolodetail"> Link white Cross with Stones</span><br>
+                                                <div class="pricedetail noprice">65.00 €</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -138,9 +187,51 @@
             </div>
         </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-    <script src="./dist/js/common.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" crossorigin="anonymous"></script>
+    <script>
+        var PrezzoBaseGratis = 35;
+        var NumeroMinimoLink = 3;
+        var ConfStoreMinimoNLink = false;
+        var PromoBaseGratis = false;
+        var PulsanteAcquista = false;
+        var prezzofiltro = 150;
+        //INIZIALIZZAZIONE VARIABILI GLOBALI
+        jQuery.fn.uislider = jQuery.fn.slider;
+        var URLMAGENTO = 'https://www.nomination.com/world/';
+        var SKINURL = 'https://www.nomination.com/skin/frontend/eurostep/core/';
+        var MEDIAURL = 'https://www.nomination.com/media/catalog/product';
+        var jQueryMobileSrc = SKINURL + 'js/jquery.mobile-1.4.5.min.js';
+        var TouchPunchSrc = SKINURL + 'js/touchpunch.js';
+        var TouchSwipeSrc = SKINURL + 'js/jquery.touchSwipe.min.js';
+        var SimboloValuta = '€';
+        var DragInCorso = false;
+        var ObjBracciale = {};
+        var CostoTBase = 0;
+        var BraccialeZoom;
+        var SceltaBase1TC;
+        var ScentaBase2TC;
+        var SceltaBase3TC;
+        var ScentaBase4TC;
+        var NrLink = 0;
+        var NrLinkBase = 0;
+        var filtroautomatico = false;
+        var insertlink = false;
+        var key_type = '';
+        var key_color = '';
+        var key_size = '';
+        var step_filtro = 1;
+        var StepFinale = false;
+        var idbundle = 0;
+        var PrezzoIncisione = 10;
+        var arr_mat = Array();
+        var arr_pie = Array();
+        var arr_occ = Array();
+        var arr_tem = Array();
+        var arr_spe = Array();
+        var arr_link = Array();
+    </script>
     <script src="./dist/js/pages/home/home.js"></script>
+    <script src="./dist/js/common.js"></script>
 
 </body>
 
