--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                                     <div id="container_bracciale">
                                         <div id="m_sfumasx"></div>
                                         <div id="m_sfumadx"></div>
+                                      <div class="locate-start" style="background: url(src/img/locate1.png); height: 42px; background-repeat: no-repeat;"></div>
                                         <div id="bracciale" style="width: 1119px;">
                                             <div id="tooltip_incisione" style="">linea1<br>linea2</div>
                                             <div id="base_0" nrbase="0" class="tessera_base tessera_base_big_dark">
@@ -119,6 +120,7 @@
                                                 <div class="handletessera drop"></div>
                                             </div>
                                         </div>
+                                      <div class="locate-end" style="background: url(src/img/locate2.png); height: 42px; background-repeat: no-repeat;"></div>
                                     </div>
                                     <div id="conf_suggerimento" style="display: none;">
                                         <div class="msg_close"></div>
