--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                                     <div id="container_bracciale">
                                         <div id="m_sfumasx"></div>
                                         <div id="m_sfumadx"></div>
-                                        <!-- <div class="locate-start" style="background: url(./dist/img/locate1.png); height: 42px; background-repeat: no-repeat;"></div> -->
-                                        <div id="bracciale" style="width: 1119px;">
+                                        <div id="bracciale" style="width: 730px;">
                                             <div id="tooltip_incisione" style="">linea1<br>linea2</div>
+                                            <div class="locate locate-start"></div>
                                             <div id="base_0" nrbase="0" class="tessera_base">
                                                 <div class="stella_incisione"></div>
                                                 <div class="tesserabracciale"></div>
@@ -119,8 +119,8 @@
                                                 <div class="tesserabracciale"></div>
                                                 <div class="handletessera drop"></div>
                                             </div>
+                                            <div class="locate locate-end"></div>
                                         </div>
-                                        <!-- <div class="locate-end" style="background: url(./dist/img/locate2.png); height: 42px; background-repeat: no-repeat;"></div> -->
                                     </div>
                                     <div id="conf_suggerimento" style="display: none;">
                                         <div class="msg_close"></div>
