--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
     <script>
         //INIZIALIZZAZIONE VARIABILI GLOBALI
-        jQuery.fn.uislider = jQuery.fn.slider;
-        var URLMAGENTO = 'https://www.nomination.com/world/';
-        var SKINURL = 'https://www.nomination.com/skin/frontend/eurostep/core/';
-        var MEDIAURL = 'https://www.nomination.com/media/catalog/product';
-        var jQueryMobileSrc = SKINURL + 'js/jquery.mobile-1.4.5.min.js';
-        var TouchPunchSrc = SKINURL + 'js/touchpunch.js';
-        var TouchSwipeSrc = SKINURL + 'js/jquery.touchSwipe.min.js';
+        // jQuery.fn.uislider = jQuery.fn.slider;
+        // var URLMAGENTO = 'https://www.nomination.com/world/';
+        // var SKINURL = 'https://www.nomination.com/skin/frontend/eurostep/core/';
+        // var MEDIAURL = 'https://www.nomination.com/media/catalog/product';
+        // var jQueryMobileSrc = SKINURL + 'js/jquery.mobile-1.4.5.min.js';
+        // var TouchPunchSrc = SKINURL + 'js/touchpunch.js';
+        // var TouchSwipeSrc = SKINURL + 'js/jquery.touchSwipe.min.js';
         var ObjBracciale = [];
     </script>
     <script src="./dist/bower_components/touchcarousel/jquery.touchcarousel-1.2.js"></script>
