--- a/index.html
+++ b/index.html
@@ -97,39 +97,127 @@
                                 <div id="conf_filtro">
                                     <div id="container_tessere" class="contenitore_tessere_tipo_composable">
                                         <div id="tessere">
-                                            <div class="tessera drag" code="8033497379146" name="Название камня" materiale="Sterling Silver" price="24.0000">
-                                                <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                            <div class="tessera">
+                                                <div class="produs">
+                                                    <div class="body">
+                                                        <p class="title">Название</p>
+                                                        <div class="img drag" code="8033497379146" name="Название камня" materiale="Sterling Silver" price="24.0000">
+                                                            <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                                        </div>
+                                                        <p class="price">25.000 ք</p>
+                                                    </div>
+                                                </div>
                                             </div>
-                                            <div class="tessera drag" code="8033497027726" name="Link white Cross with Stones" materiale="Yellow Gold" price="65.0000">
-                                                <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                            <div class="tessera">
+                                                <div class="produs">
+                                                    <div class="body">
+                                                        <p class="title">Название камня</p>
+                                                        <div class="img drag" code="8033497027726" name="Link white Cross with Stones" materiale="Yellow Gold" price="65.0000">
+                                                            <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                                        </div>
+                                                        <p class="price">25.000 ք</p>
+                                                    </div>
+                                                </div>
                                             </div>
 
-                                            <div class="tessera drag" code="8033497362773" name="Link Couple with Hearts" materiale="Sterling Silver" price="24.0000">
-                                                <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                            <div class="tessera">
+                                                <div class="produs">
+                                                    <div class="body">
+                                                        <p class="title">Название камня</p>
+                                                        <div class="img drag" code="8033497362773" name="Link Couple with Hearts" materiale="Sterling Silver" price="24.0000">
+                                                            <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                                        </div>
+                                                        <p class="price">25.000 ք</p>
+                                                    </div>
+                                                </div>
                                             </div>
-                                            <div class="tessera drag" code="8033497379160" name="Link Sister with Stone" materiale="Sterling Silver" price="24.0000">
-                                                <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                            <div class="tessera">
+                                                <div class="produs">
+                                                    <div class="body">
+                                                        <p class="title">Название камня</p>
+                                                        <div class="img drag" code="8033497379160" name="Link Sister with Stone" materiale="Sterling Silver" price="24.0000">
+                                                            <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                                        </div>
+                                                        <p class="price">25.000 ք</p>
+                                                    </div>
+                                                </div>
                                             </div>
-                                            <div class="tessera drag" code="8033497001726" name="Link Shooting Star" materiale="Yellow Gold" price="25.0000">
-                                                <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                            <div class="tessera">
+                                                <div class="produs">
+                                                    <div class="body">
+                                                        <p class="title">Название камня</p>
+                                                        <div class="img drag" code="8033497001726" name="Link Shooting Star" materiale="Yellow Gold" price="25.0000">
+                                                            <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                                        </div>
+                                                        <p class="price">25.000 ք</p>
+                                                    </div>
+                                                </div>
                                             </div>
-                                            <div class="tessera drag" code="8033497063564" name="Link Paw print" materiale="Yellow Gold" price="29.0000">
-                                                <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                            <div class="tessera">
+                                                <div class="produs">
+                                                    <div class="body">
+                                                        <p class="title">Название камня</p>
+                                                        <div class="img drag" code="8033497063564" name="Link Paw print" materiale="Yellow Gold" price="29.0000">
+                                                            <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                                        </div>
+                                                        <p class="price">25.000 ք</p>
+                                                    </div>
+                                                </div>
                                             </div>
-                                            <div class="tessera drag" code="8033497022240" name="Link Star" materiale="Yellow Gold" price="25.0000">
-                                                <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                            <div class="tessera">
+                                                <div class="produs">
+                                                    <div class="body">
+                                                        <p class="title">Название камня</p>
+                                                        <div class="img drag" code="8033497022240" name="Link Star" materiale="Yellow Gold" price="25.0000">
+                                                            <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                                        </div>
+                                                        <p class="price">25.000 ք</p>
+                                                    </div>
+                                                </div>
                                             </div>
-                                            <div class="tessera drag" code="8033497379139" name="Link Family Tree" materiale="Sterling Silver" price="24.0000">
-                                                <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                            <div class="tessera">
+                                                <div class="produs">
+                                                    <div class="body">
+                                                        <p class="title">Название камня</p>
+                                                        <div class="img drag" code="8033497379139" name="Link Family Tree" materiale="Sterling Silver" price="24.0000">
+                                                            <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                                        </div>
+                                                        <p class="price">25.000 ք</p>
+                                                    </div>
+                                                </div>
                                             </div>
-                                            <div class="tessera drag" code="8033497342683" name="Link Heart with Feet" materiale="Sterling Silver" price="20.0000">
-                                                <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                            <div class="tessera">
+                                                <div class="produs">
+                                                    <div class="body">
+                                                        <p class="title">Название камня</p>
+                                                        <div class="img drag" code="8033497342683" name="Link Heart with Feet" materiale="Sterling Silver" price="20.0000">
+                                                            <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                                        </div>
+                                                        <p class="price">25.000 ք</p>
+                                                    </div>
+                                                </div>
                                             </div>
-                                            <div class="tessera drag" code="8033497023971" name="Link Yin Yang" materiale="Yellow Gold" price="29.0000">
-                                                <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                            <div class="tessera">
+                                                <div class="produs">
+                                                    <div class="body">
+                                                        <p class="title">Название камня</p>
+                                                        <div class="img drag" code="8033497023971" name="Link Yin Yang" materiale="Yellow Gold" price="29.0000">
+                                                            <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                                        </div>
+                                                        <p class="price">25.000 ք</p>
+                                                    </div>
+                                                </div>
                                             </div>
-                                            <div class="tessera drag" code="8033497022196" name="Link Raised Star" materiale="Yellow Gold" price="25.0000">
-                                                <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                            <div class="tessera">
+                                                <div class="produs">
+                                                    <div class="body">
+                                                        <p class="title">Название камня</p>
+                                                        <div class="img drag" code="8033497022196" name="Link Raised Star" materiale="Yellow Gold" price="25.0000">
+                                                            <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                                        </div>
+                                                        <p class="price">25.000 ք</p>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
