--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                                     <div class="body">
                                                         <p class="title">Название</p>
                                                         <div class="img drag" code="8033497379146" name="Название камня" materiale="Sterling Silver" price="24.0000">
-                                                            <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                                            <img src="./dist/img/bracciale/j/01.jpg" alt="">
                                                         </div>
                                                         <p class="price">25.000 ք</p>
                                                     </div>
@@ -113,7 +113,7 @@
                                                     <div class="body">
                                                         <p class="title">Название камня</p>
                                                         <div class="img drag" code="8033497027726" name="Link white Cross with Stones" materiale="Yellow Gold" price="65.0000">
-                                                            <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                                            <img src="./dist/img/bracciale/j/02.jpg" alt="">
                                                         </div>
                                                         <p class="price">25.000 ք</p>
                                                     </div>
@@ -125,7 +125,7 @@
                                                     <div class="body">
                                                         <p class="title">Название камня</p>
                                                         <div class="img drag" code="8033497362773" name="Link Couple with Hearts" materiale="Sterling Silver" price="24.0000">
-                                                            <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                                            <img src="./dist/img/bracciale/j/03.jpg" alt="">
                                                         </div>
                                                         <p class="price">25.000 ք</p>
                                                     </div>
@@ -136,7 +136,7 @@
                                                     <div class="body">
                                                         <p class="title">Название камня</p>
                                                         <div class="img drag" code="8033497379160" name="Link Sister with Stone" materiale="Sterling Silver" price="24.0000">
-                                                            <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                                            <img src="./dist/img/bracciale/j/04.jpg" alt="">
                                                         </div>
                                                         <p class="price">25.000 ք</p>
                                                     </div>
@@ -147,7 +147,7 @@
                                                     <div class="body">
                                                         <p class="title">Название камня</p>
                                                         <div class="img drag" code="8033497001726" name="Link Shooting Star" materiale="Yellow Gold" price="25.0000">
-                                                            <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                                            <img src="./dist/img/bracciale/j/05.jpg" alt="">
                                                         </div>
                                                         <p class="price">25.000 ք</p>
                                                     </div>
@@ -158,7 +158,7 @@
                                                     <div class="body">
                                                         <p class="title">Название камня</p>
                                                         <div class="img drag" code="8033497063564" name="Link Paw print" materiale="Yellow Gold" price="29.0000">
-                                                            <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                                            <img src="./dist/img/bracciale/j/06.jpg" alt="">
                                                         </div>
                                                         <p class="price">25.000 ք</p>
                                                     </div>
@@ -169,7 +169,7 @@
                                                     <div class="body">
                                                         <p class="title">Название камня</p>
                                                         <div class="img drag" code="8033497022240" name="Link Star" materiale="Yellow Gold" price="25.0000">
-                                                            <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                                            <img src="./dist/img/bracciale/j/07.jpg" alt="">
                                                         </div>
                                                         <p class="price">25.000 ք</p>
                                                     </div>
@@ -180,7 +180,7 @@
                                                     <div class="body">
                                                         <p class="title">Название камня</p>
                                                         <div class="img drag" code="8033497379139" name="Link Family Tree" materiale="Sterling Silver" price="24.0000">
-                                                            <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                                            <img src="./dist/img/bracciale/j/08.jpg" alt="">
                                                         </div>
                                                         <p class="price">25.000 ք</p>
                                                     </div>
@@ -191,7 +191,7 @@
                                                     <div class="body">
                                                         <p class="title">Название камня</p>
                                                         <div class="img drag" code="8033497342683" name="Link Heart with Feet" materiale="Sterling Silver" price="20.0000">
-                                                            <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                                            <img src="./dist/img/bracciale/j/09.jpg" alt="">
                                                         </div>
                                                         <p class="price">25.000 ք</p>
                                                     </div>
@@ -202,7 +202,7 @@
                                                     <div class="body">
                                                         <p class="title">Название камня</p>
                                                         <div class="img drag" code="8033497023971" name="Link Yin Yang" materiale="Yellow Gold" price="29.0000">
-                                                            <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                                            <img src="./dist/img/bracciale/j/10.jpg" alt="">
                                                         </div>
                                                         <p class="price">25.000 ք</p>
                                                     </div>
@@ -213,7 +213,7 @@
                                                     <div class="body">
                                                         <p class="title">Название камня</p>
                                                         <div class="img drag" code="8033497022196" name="Link Raised Star" materiale="Yellow Gold" price="25.0000">
-                                                            <img src="./dist/img/bracciale/j/2.jpg" alt="">
+                                                            <img src="./dist/img/bracciale/j/11.jpg" alt="">
                                                         </div>
                                                         <p class="price">25.000 ք</p>
                                                     </div>
