Renamed class wrapper by wrapper-braslet . Wrapper is already used

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
-    <div class="wrapper">
+    <div class="wrapper-braslet">
         <div class="page">
             <div class="content-wrapper">
                 <div class="container main-container">
