removed unused classes

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
   <![endif]-->
 
     <div class="wrapper-braslet">
-        <div class="page">
+        <div class="">
             <div class="content-wrapper">
                 <div class="container main-container">
-                    <div class="main">
+                    <div class="">
                         <div class="conf_composable">
                             <div id="step3">
                                 <div id="fixed_bracciale">
